TestSuite/errors/err0081.pas
var p := nil;
  
begin
end.